Updating links and image

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section class="wrapper spotlight style1" id="firstSection">
     <div class="inner">
-        <img src="{{ imagePath }}/pic01.jpg" alt="Person standing on an interactive display" class="image"/>
+        <img src="{{ imagePath }}/pic01.jpg" alt="Person standing on an interactive display" title="Person standing on an interactive display" class="image"/>
         <div class="content">
             <h1 class="major">Packet39</h1>
             <strong class="major focus">Code outside the box</strong>
@@ -20,7 +20,7 @@
 
 <section class="wrapper alt spotlight style2">
     <div class="inner">
-        <img src="{{ imagePath }}/pic04.jpg" alt="Person using a VR headset" class="image"/>
+        <img src="{{ imagePath }}/pic04.jpg" alt="Person using a VR headset" title="Person using a VR headset" class="image"/>
         <div class="content">
             <h2 class="major">Virtual Reality</h2>
             <p>We design and develop Virual Reality, Augmented Reality and Mixed Reality games and experiences.</p>
@@ -33,7 +33,7 @@
 
 <section class="wrapper spotlight style1">
     <div class="inner">
-        <img src="{{ imagePath }}/pewpew.png" alt="Augmented realited demo of Alien Attack" class="image"/>
+        <img src="{{ imagePath }}/pewpew.png" alt="Augmented realited demo of Alien Attack" title="Augmented realited demo of Alien Attack" class="image"/>
         <div class="content">
             <h2 class="major">Augmented Reality</h2>
             <p>Bring to life static everyday objects, from buisness cards, to books, magazines, brochures and
@@ -63,7 +63,7 @@
 
 <section class="wrapper alt spotlight style2">
     <div class="inner">
-        <img src="{{ imagePath }}/pic02.jpg" alt="Example of computer code" class="image"/>
+        <img src="{{ imagePath }}/pic02.jpg" alt="Example of computer code" title="Example of computer code" class="image"/>
         <div class="content">
             <h2 class="major">Software</h2>
             <p>We develop software under Windows or Linux, using C# & .Net, Matlab, C++, Java or Python. We are
@@ -85,7 +85,7 @@
 
 <section class="wrapper spotlight style3">
     <div class="inner">
-        <img src="{{ imagePath }}/pic03.jpg" alt="A wide range of hardware and sensors on a table" class="image"/>
+        <img src="{{ imagePath }}/pic03.jpg" alt="A wide range of hardware and sensors on a table" title="A wide range of hardware and sensors on a table" class="image"/>
         <div class="content">
             <h2 class="major">Hardware & Sensors</h2>
             <p>We can recommend the hardware most suited for your needs, or work with the equipment you already
@@ -113,7 +113,7 @@
 
                 <h3 class="major">Orbital Injection - Virtual Reality game</h3>
                 <p>Our VR game is now live on <a href="http://store.steampowered.com/app/587730/"
-                                                 target="_blank">Steam</a>.
+                                                 target="_blank" title="Orbital Injection On Steam">Steam</a>.
                     Grab planets and toss them into a stable orbit. This is a room-scale virtual reality
                     experiance, running on the HTC Vive.</p>
 
@@ -127,9 +127,9 @@
                 <h3 class="major">Augmented Reality Buisness Card</h3>
                 <p>We spruced up our Packet39 Buisness cards with some Augmented Reality magic. Realtime digital
                     3D graphics overlay, attached to a physical object. If you want to try it yourself, <a
-                            href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=0">download
+                            href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=0" title="Augmented Reality Business card App">download
                         the app</a>
-                    (Android only). You'll need a <a href="{{ imagePath }}/BizCard.png" target="_blank">Packet39
+                    (Android only). You'll need a <a href="{{ imagePath }}/BizCard.png" target="_blank" title="Augmented reality business card image">Packet39
                         card</a>, print
                     one if you don't have any.</p>
 
@@ -168,7 +168,9 @@
                     <div class="intrinsicWrapper">
                         <img
                                 src="{{ imagePath }}/3d_print.jpg"
-                                alt="High resolution 3D printer example"/>
+                                alt="High resolution 3D printer example"
+                                title="High resolution 3D printer example"
+                        />
                     </div>
                 </div>
                 <br>
@@ -197,7 +199,7 @@
         <h2 class="major">The Team</h2>
         <section class="features">
             <article>
-                <div class="image"><img src="{{ imagePath }}/vice.png" alt="Shachar 'Vice' Weis profile photo"/></div>
+                <div class="image"><img src="{{ imagePath }}/vice.png" alt="Shachar 'Vice' Weis profile photo" title="Shachar 'Vice' Weis profile photo"/></div>
                 <h3 class="major">Shachar "Vice" Weis</h3>
                 <p>Shachar is a software developer with over 20 years of experience. He has worked in many
                     fields and disciplines, from ancient mainframes to tiny system-on-chip units. Shachar has
@@ -207,36 +209,36 @@
                 <p>
                     Shachar usually goes by Vice, and is also a tinkerer, maker, 3d printing enthusiast and
                     photographer. Follow some of his projects on his blog <a
-                        href="http://CallMeVice.com">CallMeVice.com</a>
+                        href="http://CallMeVice.com" target="_blank" title="CallMeVice.com Website">CallMeVice.com</a>
                 </p>
 
 
             </article>
             <article>
-                <div class="image"><img src="{{ imagePath }}/lena.png" alt="Dr. Lena Gorelick profile photo"/></div>
+                <div class="image"><img src="{{ imagePath }}/lena.png" alt="Dr. Lena Gorelick profile photo" title="Dr. Lena Gorelick profile photo"/></div>
                 <h3 class="major">Lena Gorelick</h3>
                 <p> Dr. Gorelick is currently a research scientist with the Computer Science Department at the
                     University of Western Ontario, London, Canada. Both her MSc (2004) and PhD (2009) are in
                     Computer Science and Applied Mathematics from the Weizmann Institute of Science, Israel.
                     During the past 16 years Lena has gained a lot of experience in various academic, military
                     and industrial fields. Lena's publications can be found on her website, <a
-                            href="http://www.csd.uwo.ca/~ygorelic/">csd.uwo.ca/~ygorelic/</a></p>
+                            href="http://www.csd.uwo.ca/~ygorelic/" target="_blank" title="Lena's Publications">csd.uwo.ca/~ygorelic/</a></p>
                 <p>
                     Lena is also an artist and a jeweler, she has an <a
-                        href="https://lenagorelick.wordpress.com/">art blog</a> and an Etsy store called <a
-                        href="https://nunandnoot.etsy.com/">Nun&amp;Noot</a>.</p>
+                        href="https://lenagorelick.wordpress.com/" target="_blank" title="Lena's Art Blog">art blog</a> and an Etsy store called <a
+                        href="https://nunandnoot.etsy.com/" target="_blank" title="Lena's Etsy Store">Nun&amp;Noot</a>.</p>
             </article>
 
             <article>
-                <div class="image"><img src="{{ imagePath }}/hossam.png" alt="Hossam Issacs profile photo"/></div>
+                <div class="image"><img src="{{ imagePath }}/hossam.png" alt="Hossam Issacs profile photo" title="Hossam Issacs profile photo"/></div>
                 <h3 class="major">Hossam Issacs</h3>
                 <p> Hossam is doing his post-doctorate at the Computer Science Department at the University of
                     Western Ontario, London, Canada. Publications and CV can be found on Hossam's website: <a
-                            href="http://www.hisack.com/">hisack.com</a></p>
+                            href="http://www.hisack.com/" target="_blank" title="Hossam's Website">hisack.com</a></p>
             </article>
 
             <article>
-                <div class="image"><img src="{{ imagePath }}/sarah.jpg" alt="Sarah Legault profile photo"/></div>
+                <div class="image"><img src="{{ imagePath }}/sarah.jpg" alt="Sarah Legault profile photo" title="Sarah Legault profile photo"/></div>
                 <h3 class="major">Sarah Legault </h3>
                 <p>Sarah is an award winning filmmaker, director, producer, animator and writer. Her first
                     stop-motion animation Dear Love earned the Best Animated Short Film award at the 2014
@@ -259,17 +261,17 @@
         <p>We will be happy to answer any questions you might have and we'll create a white paper and a proposal
             for your project, free of charge and without commitment. </p>
         <ul class="contact">
-            <li class="fa-envelope"><a href="mailto:Vice@Packet39.com">Vice@Packet39.com</a></li>
+            <li class="fa-envelope"><a href="mailto:Vice@Packet39.com" title="Email Packet39">Vice@Packet39.com</a></li>
             <li class="fa-home">
                 Packet39<br/>
                 39 Raebrook Place<br/>
                 London, ON, Canada<br/>
                 N5X2Z8
             </li>
-            <li class="fa-phone"><a href="tel:5199026191">519-902-6191</a></li>
-            <li class="fa-twitter"><a href="https://twitter.com/Vice_Packet39">@Vice_Packet39</a></li>
-            <li class="fa-linkedin"><a href="https://www.linkedin.com/company/packet39">Packet39</a></li>
-            <li class="fa-wordpress"><a href="https://callmevice.com/">CallMeVice.com</a></li>
+            <li class="fa-phone"><a href="tel:5199026191" title="Call Packet39">519-902-6191</a></li>
+            <li class="fa-twitter"><a href="https://twitter.com/Vice_Packet39" target="_blank" title="Packet39 on Twitter">@Vice_Packet39</a></li>
+            <li class="fa-linkedin"><a href="https://www.linkedin.com/company/packet39" target="_blank" title="Packet39 On LinkedIn">Packet39</a></li>
+            <li class="fa-wordpress"><a href="https://callmevice.com/" target="_blank" title="Vice's Website">CallMeVice.com</a></li>
         </ul>
         <form method="post" id="contactForm" action="<?php echo '/app/submit.php'; ?>">
 
