--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -237,6 +237,11 @@
                             href="http://www.hisack.com/" target="_blank" title="Hossam's Website">hisack.com</a></p>
             </article>
 
+            <article>
+                <div class="image"><img src="{{ imagePath }}/nick.png" alt="Nicholas Hyland profile photo" title="Nicholas Hyland profile photo"/></div>
+                <h3 class="major">Nicholas Hyland</h3>
+                <p> Nicholas Hylands is a freelance technical artist, studying video game design at Fanshawe College (Class of 2018). Nicholas has a large passion for creating art and problem solving.</p>
+            </article>
 
 
         </section>
