--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -108,14 +108,12 @@
         <h2 class="major">Projects</h2>
         <section class="features">
             <article>
-                <div class="youtubePlayer" data-id="kyDiQ-KHNe0" data-name="Orbital Injection - VR Game"></div>
+                <div class="youtubePlayer" data-id="htp0rUHSunw" data-name="Gieger Counter Training"></div>
                 <br>
 
-                <h3 class="major">Orbital Injection - Virtual Reality game</h3>
-                <p>Our VR game is now live on <a href="http://store.steampowered.com/app/587730/"
-                                                 target="_blank" title="Orbital Injection On Steam">Steam</a>.
-                    Grab planets and toss them into a stable orbit. This is a room-scale virtual reality
-                    experiance, running on the HTC Vive.</p>
+                <h3 class="major">Gieger Counter - Virtual Reality training</h3>
+                <p>Training and testing on the usage of a hand-held radiation detector. <br><br>We developed this VR application for the Pickering nuclear power plant. An operator places a virtual radiation source on the table and the trainee has to find it. A mathematical model, in conjuction with a physical simulation, results in a highly accurate and responsive virtual Geiger counter. This test can be conducted in an office or even at home, without expensive equipment and without exposing trainees to a harmful radiation. 
+</p>
 
 
             </article>
@@ -181,15 +179,17 @@
                     Z. Castable resin is also available, for creating metal objects.</p>
 
             </article>
+
             <article>
-                <div class="sketchfabPlayer" data-id="89f374da58dc4a5d974bcaba16c68d7f"
-                     data-name="3D Scan of a house"></div>
+                <div class="youtubePlayer" data-id="vY0xsmCPbnQ" data-name="Whisper Room"></div>
                 <br>
-                <h3 class="major">3D Scan of a house</h3>
-                <p>This 3D model of a house was reconstructed from 200 images, shot with a custom built
-                    autonomous quadcopter.</p>
+
+                <h3 class="major">Whisper Room </h3>
+                <p>Developed for the audiology department at the University of Western Ontario, this VR application can simulate a wide range of accustic environments. A user is presented with a room that includes several audio sources. The sources can be moved in 3D space and their volume / reach adjusted. This VR setup could potentially replace audio testing rooms, which have dozens of custom built speakers and cost upwards of $100k.</p>
+
 
             </article>
+
         </section>
     </div>
 </section>
