--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,7 +23,7 @@
         <img src="{{ imagePath }}/pic04.jpg" alt="Person using a VR headset" title="Person using a VR headset" class="image"/>
         <div class="content">
             <h2 class="major">Virtual Reality</h2>
-            <p>We design and develop Virual Reality, Augmented Reality and Mixed Reality games and experiences.</p>
+            <p>We design and develop Virtual Reality, Augmented Reality and Mixed Reality games and experiences.</p>
             <p>We can build your idea, or help you refine it. We can deliver games or applications for Google
                 Cardboard, Daydream, Samsung GearVR, HTC Vive or the Oculus Rift.</p>
         </div>
