--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,8 +36,8 @@
         <img src="{{ imagePath }}/pewpew.png" alt="Augmented realited demo of Alien Attack" title="Augmented realited demo of Alien Attack" class="image"/>
         <div class="content">
             <h2 class="major">Augmented Reality</h2>
-            <p>Bring to life static everyday objects, from buisness cards, to books, magazines, brochures and
-                even three dimentional items such as toys or consumer products. Overlay, animate, gamify and
+            <p>Bring to life static everyday objects, from business cards, to books, magazines, brochures and
+                even three dimensional items such as toys or consumer products. Overlay, animate, gamify and
                 extend your marketing materials.</p>
             <p>Try it yourself, download our AR apps from the links below (Android only). Run the app and point
                 your smartphone camera at one of our cards. If you don't have any, you can download and print
