re-working file structure

--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -1,4 +1,8 @@
-{% extends "./layouts/layout.php" %}
+{% set seoData = {
+"test": 'test'
+}%}
+
+{% extends "./layouts/layout.njk" %}
 
 {% block content %}
 <section class="wrapper spotlight style1" id="firstSection">
@@ -16,6 +20,7 @@
         </div>
     </div>
 </section>
+
 
 
 <section class="wrapper alt spotlight style2">
@@ -248,62 +253,4 @@
     </div>
 </section>
 
-<section id="footer" class="wrapper alt style4">
-    <div class="inner">
-        <h2 class="major">Contact</h2>
-        <p>We will be happy to answer any questions you might have and we'll create a white paper and a proposal
-            for your project, free of charge and without commitment. </p>
-        <ul class="contact">
-            <li class="fa-envelope"><a href="mailto:Vice@Packet39.com" title="Email Packet39">Vice@Packet39.com</a></li>
-            <li class="fa-home">
-                Packet39<br/>
-                39 Raebrook Place<br/>
-                London, ON, Canada<br/>
-                N5X2Z8
-            </li>
-            <li class="fa-phone"><a href="tel:5199026191" title="Call Packet39">519-902-6191</a></li>
-            <li class="fa-twitter"><a href="https://twitter.com/Vice_Packet39" target="_blank" title="Packet39 on Twitter">@Vice_Packet39</a></li>
-            <li class="fa-linkedin"><a href="https://www.linkedin.com/company/packet39" target="_blank" title="Packet39 On LinkedIn">Packet39</a></li>
-            <li class="fa-wordpress"><a href="https://callmevice.com/" target="_blank" title="Vice's Website">CallMeVice.com</a></li>
-        </ul>
-        <form method="post" id="contactForm" action="<?php echo '/app/submit.php'; ?>">
-
-            <?php
-            $response = $session->getFlashBag()->get('response');
-            foreach($response as $key => $value) :
-            ?>
-                <div class="notifications">
-                    <p><?php echo $value; ?></p>
-                </div>
-            <?php endforeach; ?>
-
-            <?php $errors = $session->getFlashBag()->get('validation'); ?>
-            <?php $flashData = $session->getFlashBag()->get('data') ?? []; ?>
-            <input type="hidden" name="csrfToken" value="<?php echo $token; ?>"/>
-            <input type="hidden" name="website" value=""/>
-            <div class="field">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name"
-                       value="<?php if(!empty($flashData['form']['name'])) { echo $flashData['form']['name']; } ?>"/>
-                <span><?php if(!empty($errors['validation']['name'])) { echo $errors['validation']['name']; } ?></span>
-            </div>
-            <div class="field">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email"
-                       value="<?php if(!empty($flashData['form']['email'])) { echo $flashData['form']['email']; } ?>"/>
-                <span><?php if(!empty($errors['validation']['email'])) { echo $errors['validation']['email']; } ?></span>
-            </div>
-            <div class="field">
-                <label for="message">Message</label>
-                <textarea name="message" id="message"
-                          rows="4"><?php if(!empty($flashData['form']['message'])) { echo $flashData['form']['message']; } ?></textarea>
-                <span><?php if(!empty($errors['validation']['message'])) { echo $errors['validation']['message']; } ?></span>
-            </div>
-            <ul class="actions">
-                <li><input type="submit" value="Send Message"/></li>
-            </ul>
-        </form>
-
-    </div>
-</section>
 {% endblock %}
