Correcting file reference

--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -2,7 +2,7 @@
 "test": 'test'
 }%}
 
-{% extends "./layouts/layout.njk" %}
+{% extends "layouts/layout.tpl" %}
 
 {% block content %}
 <section class="wrapper spotlight style1" id="firstSection">
