Browsersync and correcting encoding file output part

--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -2,7 +2,7 @@
 "test": 'test'
 }%}
 
-{% extends "layouts/layout.tpl" %}
+{% extends "layouts/layout.twig" %}
 
 {% block content %}
 <section class="wrapper spotlight style1" id="firstSection">
@@ -20,7 +20,6 @@
         </div>
     </div>
 </section>
-
 
 
 <section class="wrapper alt spotlight style2">
