--- a/src/assets/sass/base/_page.scss
+++ b/src/assets/sass/base/_page.scss
@@ -27,8 +27,8 @@ body {
     background-color: _palette(bg);
     background-repeat: no-repeat;
     background-size: 100% auto;
-    background-attachment: fixed, fixed;
-    background-image: url('./assets/images/main_small.jpg');
+    background-attachment: fixed;
+    background-image: url("./assets/images/main_small.jpg");
     margin: 0;
 
     // Prevents animation/transition "flicker" on page load.
