template work and header image

--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -1,5 +1,7 @@
 {% set seoData = {
-"test": 'test'
+    'pageTitle': 'Packet39 | Virtual & Augmented Reality, Custom Solutions',
+    'pageDescription' : 'We develop custom software and hardware solutions, Virtual Reality, Augmented Reality, computer vision and image processing applications for your needs.',
+    'pageURL' : 'http://packet39.com/'
 }%}
 
 {% extends "layouts/layout.twig" %}
@@ -9,7 +11,7 @@
     <div class="inner">
         <img src="{{ imagePath }}/pic01.jpg" alt="Person standing on an interactive display" title="Person standing on an interactive display" class="image"/>
         <div class="content">
-            <h1 class="major">Packet39</h1>
+            <h1 class="major">Packet<sup>39</sup></h1>
             <strong class="major focus">Code outside the box</strong>
             <p>We are a team of professional software developers and academics, working together to provide
                 software & hardware solutions. We thrive in the space between code and the physical world and we
