Including blog link

--- a/src/templates/layouts/layout.twig
+++ b/src/templates/layouts/layout.twig
@@ -73,7 +73,7 @@
             <li><a href="/#wrapper" data-scroll>About</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/the-team">The Team</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="/blog">Blog</a></li>
             <li><a href="#footer" data-scroll>Contact Us</a></li>
         </ul>
     </nav>
