--- a/src/assets/sass/custom/_fonts.scss
+++ b/src/assets/sass/custom/_fonts.scss
@@ -1,10 +1,10 @@
 #html.js {
-    p, a, h1, h2, h3, h4, h5, h6, ul, ol, span, strong, i {
+    p, a, h1, h2, h3, h4, h5, h6, ul, ol, span, strong, i, input, label {
         transition: opacity 0.1s ease-in-out;
         opacity:1;
     }
     &.no-fonts {
-        p, a, h1, h2, h3, h4, h5, h6, ul, ol, span, strong, i {
+        p, a, h1, h2, h3, h4, h5, h6, ul, ol, span, strong, i, input, label {
             opacity: 0;
         }
     }
