--- a/src/assets/sass/custom/_blog.scss
+++ b/src/assets/sass/custom/_blog.scss
@@ -1,10 +1,70 @@
 .blog {
+    #pagination .inner {
+        padding: 2em 0;
+
+    }
     #footer {
-        .inner {
-            padding-top: 2.5em;
-        }
+
         .copyright {
             margin: 0;
         }
+    }
+}
+#blogContainer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .blogWrapper {
+        width: 100%;
+        flex: 3 1 60%;
+        @media (min-width: 50.6875rem) {
+            padding-right: 2em;
+        }
+    }
+    .sidebarWrapper {
+        max-width: 280px;
+        min-width: 280px;
+        flex: 1 1 30%;
+    }
+    article {
+        width: 100%;
+        img {
+            max-width: 100%;
+            width: 100% !important;
+            height: auto;
+        }
+        a {
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+            word-break: break-all;
+            word-break: break-word;
+            hyphens: auto;
+        }
+    }
+    .read-more {
+        margin-top: 1.5rem;
+        display: inline-block;
+    }
+    .embed-container {
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%;
+        iframe, object, embed {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+.nav-links {
+    .next, .prev {
+        margin: 0 1em;
+    }
+    .page-numbers {
+        margin: 0 0.25em;
     }
 }
