--- a/src/assets/sass/custom/_blog.scss
+++ b/src/assets/sass/custom/_blog.scss
@@ -77,3 +77,27 @@
         margin: 0 0.25em;
     }
 }
+
+.widget_recent_entries {
+    ul {
+        list-style: none;
+        margin: 0;
+        padding-left: 0;
+    }
+    li {
+        margin: 0;
+        padding: 0.75rem 0;
+        border-bottom: 1px solid grey;
+        &:first-child {
+            border-top: 1px solid grey;
+        }
+    }
+    .post-date {
+        font-size: 0.75rem;
+        display: block;
+        &:before {
+            content: '-';
+            padding-right: 0.5rem
+        }
+    }
+}
