--- a/src/templates/projects.njk
+++ b/src/templates/projects.njk
@@ -2,13 +2,13 @@
 'pageTitle': 'Projects | Packet39',
 'pageDescription' : 'Discover some of the custom software and hardware solutions developed by Packet39 to suit your needs.',
 'pageURL' : 'http://packet39.com/projects',
-'footerDirection' : ''
+'footerDirection' : 'alt'
 }%}
 
 {% extends "layouts/layout.twig" %}
 
 {% block content %}
-    <section class="wrapper alt style3">
+    <section class="wrapper style3">
         <div class="inner">
             <h1 class="major">Projects</h1>
             <p>We are a team of professional software developers and academics, working together to provide
