--- a/src/templates/the-team.njk
+++ b/src/templates/the-team.njk
@@ -1,7 +1,8 @@
 {% set seoData = {
 'pageTitle': 'The Team | Packet39',
 'pageDescription' : 'Learn more about those behind Packet39',
-'pageURL' : 'http://packet39.com/the-team'
+'pageURL' : 'http://packet39.com/the-team',
+'footerDirection' : 'alt'
 }%}
 
 {% extends "layouts/layout.twig" %}
