--- a/src/assets/sass/components/_section.scss
+++ b/src/assets/sass/components/_section.scss
@@ -11,8 +11,8 @@ section, article {
         text-align: center;
     }
 }
-#firstSection {
-    .inner {
-        padding: 3.5em 0 0 0;
-    }
-}
+//#firstSection {
+//    .inner {
+//        padding: 3.5em 0 0 0;
+//    }
+//}
