--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -21,6 +21,7 @@
         .inner {
             margin: 0 auto;
             width: _size(inner);
+            max-width: 100%;
         }
 
         h2 {
@@ -136,9 +137,9 @@
     }
 
     .inner {
-        @include padding(2em, 0);
+        @include padding(2em, 2em);
         margin: 0 auto;
-        width: _size(inner);
+        max-width: _size(inner);
     }
 
     @for $i from 2 through _misc(max-wrapper-styles) {
