--- a/src/templates/layouts/layout.twig
+++ b/src/templates/layouts/layout.twig
@@ -71,7 +71,9 @@
 <body>
 
 <header id="mainHeader">
-
+    <a href="/" title="Packet39 Home Link" id="homeLink">
+        <img src="{{ imagePath }}/monochrome-logo.png" alt="Packet39 Monochrome Box Logo" />
+    </a>
     <nav>
         <ul>
             <li><a href="/#wrapper" data-scroll>About</a></li>
@@ -84,7 +86,7 @@
 </header>
 
 <main id="page-wrapper">
-    <div id="heroImage"><img src="{{ imagePath }}/main_small.jpg" /></div>
+    <div id="heroImage"><img src="{{ imagePath }}/main_small.jpg" alt="Packet39 projected onto a bench of tools and equipment" /></div>
     <div id="wrapper">
         {% block content %}
 
