--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -50,6 +50,7 @@
 @import 'layout/banner';
 @import 'layout/wrapper';
 @import 'layout/footer';
+@import 'layout/menu';
 
 @import 'custom/youtube';
 @import 'custom/intrinsic';
