--- a/src/assets/sass/custom/_header.scss
+++ b/src/assets/sass/custom/_header.scss
@@ -2,15 +2,18 @@ $headerHeight: 3rem;
 
 #mainHeader {
     position: fixed;
-    top: 0;
+    top: 3.5rem;
     z-index:100;
+    width: 100vw;
+    transform: translate(100%, 0);
+    transition: transform 0.2s ease-in-out;
     background-color: lighten(_palette(accent),5%);
-    width: 10.5rem;
-    height: 100vh;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
-    display: none;
     @media all and (min-width: 50rem) and (min-height: 30rem) {
-        display: block;
+        transform: translate(0,0);
+        height: 100vh;
+        width: 10.5rem;
+        top: 0;
     }
     nav {
         margin: 0 auto;
@@ -35,12 +38,20 @@ $headerHeight: 3rem;
         }
     }
 }
+html.navOpen {
+    #mainHeader {
+        transform: translate(0,0);
+    }
+}
 
-#homeLink {
+.homeLink {
     border-bottom: none;
-    display: block;
+    display: none;
     text-align: center;
     padding-top: 1rem;
+    @media all and (min-width: 50rem) and (min-height: 30rem) {
+        display: block;
+    }
     img {
         max-width: 50%;
         margin: 0 auto;
@@ -54,18 +65,12 @@ $headerHeight: 3rem;
     position: relative;
     margin-top: 3rem;
     overflow: hidden;
-    img {
-        position: absolute;
-        top: 50%;
-        min-height: 100%;
-        min-width: 100%;
-        width: auto;
-        transform: translate(0, -50%);
-    }
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #page-wrapper {
-
     margin-top: -$headerHeight;
     @media all and (min-width: 50rem) and (min-height: 30rem) {
         margin-left: 10.5rem;
