--- a/src/templates/layouts/layout.twig
+++ b/src/templates/layouts/layout.twig
@@ -129,6 +129,7 @@
             <li>2018 © Packet39. All rights reserved.</li>
             <li><a href="/privacy">Privacy Policy</a></li>
             <li><a href="/accessibility">Accessibility</a></li>
+            <li><a href="/sitemap">Sitemap</a>
         </ul>
     </div>
 </footer>
