Working on sitempa as well as adjusting styles for date of posts

--- a/src/assets/sass/custom/_blog.scss
+++ b/src/assets/sass/custom/_blog.scss
@@ -77,6 +77,12 @@
         margin: 0 0.25em;
     }
 }
+.entry-header {
+    padding-bottom: 1.5rem;
+}
+.entry-title {
+    margin-bottom: 0.5rem;
+}
 
 .widget_recent_entries {
     ul {
